# moldClaw

./: .gitignore  README.md  debug_resources.md  download_node.md  index.html  package-no-git.json  package.json  tailwind.config.js  windows_debug_guide.md
docs/: DEVICE_IDENTITY_SPEC.md  GIT_FREE_INSTALL.md  INSTALLATION_STRATEGY.md  INSTALL_DETECTION.md  LEGAL_DISCLAIMER_KR.md  LEGAL_RISK_ANALYSIS.md  LEGAL_RISK_TOOLS_SKILLS.md  MESSENGER_REQUIRED_FIELDS.md  ONBOARD_COVERAGE.md  OPENCLAW_CONFIG_REFERENCE.md  OPENCLAW_CONFIG_SPEC.md  OPENCLAW_ONBOARD_ANALYSIS.md  PRD_CURRENT_FEATURES.md  QA_CHECKLIST.md  QA_LINUX.md  QA_MACOS.md  QA_REPORT_2026-02-24.md  QA_REPORT_2026-02-25.md  QA_WINDOWS.md  QA_WORKFLOW.md  RESOURCE_RESOLUTION.md  SCHEMA_AUDIT_groupPolicy.md  SECURITY_AUDIT_2026-02-23.md  SETTINGS_ENDPOINTS_QA.md  SETTINGS_UX_PROPOSAL.md  SETTINGS_WORKFLOW_QA.md  SKILL_IMPLEMENTATION_AUDIT.md  SKILL_IMPLEMENTATION_PLAN.md  SKILL_INSTALLATION_REQUIREMENTS.md  SKILL_PLATFORM_ARCHITECTURE.md  SKILL_STATUS_IMPLEMENTATION.md  SKILL_TOOL_IMPLEMENTATION_GUIDE.md  TOOLS_SKILLS_REQUIRED_FIELDS.md
scripts/: bump-version.mjs  bundle-openclaw.ps1  bundle-openclaw.sh  (+2 more)
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json  tauri.conf.windows.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.md  gog_credentials.json
src-tauri/resources/node-portable/: .gitkeep
src-tauri/src/: lib.rs  main.rs  openclaw.rs  openclaw_extractor.rs  openclaw_global_installer.rs  openclaw_installer_alt.rs  openclaw_installer_test.rs  openclaw_manager.rs  resource_resolver.rs  sandbox_test.rs  skill_definitions.rs  skills.rs  tests.rs  windows_helper.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
(+62 files in other folders)
