[package]
name = "moldclaw"
version = "0.2.3"
description = "Simple OpenClaw wrapper for easy messenger AI setup"
authors = ["sanghyuck"]
edition = "2021"

[lib]
name = "moldclaw_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
tokio = { version = "1", features = ["full"] }
dirs = "6"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
