[package]
name = "moldclaw"
version = "0.7.2"
description = "Simple OpenClaw wrapper for easy messenger AI setup"
authors = ["sanghyuck"]
edition = "2021"

[lib]
name = "moldclaw_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
json5 = "0.4"
tokio = { version = "1", features = ["full"] }
dirs = "6"
chrono = "0.4"
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
shellexpand = "3.1.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
